--- a/src/NewColorForm.css
+++ b/src/NewColorForm.css
@@ -1,3 +1,20 @@
 .NewColorForm {
   margin-top: 10px;
 }
+
+form {
+  width: 350px;
+  text-align: left;
+  margin: 10px auto;
+}
+
+label {
+  text-align: right;
+  width: 100px;
+  display:inline-block;
+  margin: 10px;
+}
+
+input {
+  width: 200px; 
+}
